logs/django-manifest.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_manifest-0.1.egg-info'...
Listing './lib/python3.5/site-packages/manifest'...
Listing './lib/python3.5/site-packages/manifest/accounts'...
Listing './lib/python3.5/site-packages/manifest/accounts/fixtures'...
Compiling './lib/python3.5/site-packages/manifest/accounts/forms.py'...
***   File "./lib/python3.5/site-packages/manifest/accounts/forms.py", line 218
    raise TypeError, "user must be an instance of User"
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/manifest/accounts/locale'...
Listing './lib/python3.5/site-packages/manifest/accounts/locale/tr'...
Listing './lib/python3.5/site-packages/manifest/accounts/locale/tr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/manifest/accounts/management'...
Listing './lib/python3.5/site-packages/manifest/accounts/management/commands'...
Listing './lib/python3.5/site-packages/manifest/accounts/tests'...
Listing './lib/python3.5/site-packages/manifest/bootstrap'...
Listing './lib/python3.5/site-packages/manifest/bootstrap/locale'...
Listing './lib/python3.5/site-packages/manifest/bootstrap/locale/tr'...
Listing './lib/python3.5/site-packages/manifest/bootstrap/locale/tr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/manifest/bootstrap/static'...
Listing './lib/python3.5/site-packages/manifest/bootstrap/static/css'...
Listing './lib/python3.5/site-packages/manifest/bootstrap/static/fonts'...
Listing './lib/python3.5/site-packages/manifest/bootstrap/static/js'...
Listing './lib/python3.5/site-packages/manifest/bootstrap/templates'...
Listing './lib/python3.5/site-packages/manifest/bootstrap/templates/accounts'...
Listing './lib/python3.5/site-packages/manifest/bootstrap/templates/accounts/emails'...
Listing './lib/python3.5/site-packages/manifest/bootstrap/templates/bootstrap'...
Listing './lib/python3.5/site-packages/manifest/bootstrap/templates/comments'...
Listing './lib/python3.5/site-packages/manifest/bootstrap/templates/flatpages'...
Listing './lib/python3.5/site-packages/manifest/bootstrap/templates/pagination'...
Listing './lib/python3.5/site-packages/manifest/bootstrap/templatetags'...
Listing './lib/python3.5/site-packages/manifest/core'...
Listing './lib/python3.5/site-packages/manifest/core/fixtures'...
Listing './lib/python3.5/site-packages/manifest/core/locale'...
Listing './lib/python3.5/site-packages/manifest/core/locale/tr'...
Listing './lib/python3.5/site-packages/manifest/core/locale/tr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/manifest/core/projects'...
Listing './lib/python3.5/site-packages/manifest/core/projects/basic'...
Listing './lib/python3.5/site-packages/manifest/core/projects/basic/project_name'...
Listing './lib/python3.5/site-packages/manifest/core/projects/basic/project_name/templates'...
Listing './lib/python3.5/site-packages/manifest/core/static'...
Listing './lib/python3.5/site-packages/manifest/core/static/css'...
Listing './lib/python3.5/site-packages/manifest/core/static/js'...
Listing './lib/python3.5/site-packages/manifest/core/static/wmd'...
Listing './lib/python3.5/site-packages/manifest/core/static/wmd/images'...
Listing './lib/python3.5/site-packages/manifest/core/templates'...
Listing './lib/python3.5/site-packages/manifest/core/templates/core'...
Listing './lib/python3.5/site-packages/manifest/core/templatetags'...
Listing './lib/python3.5/site-packages/manifest/facebook'...
Listing './lib/python3.5/site-packages/manifest/facebook/locale'...
Listing './lib/python3.5/site-packages/manifest/facebook/locale/tr'...
Listing './lib/python3.5/site-packages/manifest/facebook/locale/tr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/manifest/facebook/static'...
Listing './lib/python3.5/site-packages/manifest/facebook/static/img'...
Listing './lib/python3.5/site-packages/manifest/facebook/templates'...
Listing './lib/python3.5/site-packages/manifest/facebook/templates/facebook'...
Listing './lib/python3.5/site-packages/manifest/facebook/templatetags'...
Compiling './lib/python3.5/site-packages/manifest/facebook/templatetags/facebook_avatar.py'...
***   File "./lib/python3.5/site-packages/manifest/facebook/templatetags/facebook_avatar.py", line 24
    raise template.TemplateSyntaxError, "facebook_avatar tag takes at least one argument (user)"
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
